# VoicePrintReco

./: LISENCE  LISENCE.md  README  README.md
ALIZE_2.0/: ALIZE_2005.sln
ALIZE_2.0/doc/: index.docx
ALIZE_2.0/lib/: ALIZE_Win32_Debug.exp  ALIZE_Win32_Debug.lib
ALIZE_2.0/wincfg/: ALIZE_2005.vcproj
ALIZE_3.0/: ALIZE.sln  Makefile  Makefile.in  config.status  configure  libtool
ALIZE_3.0/src/: Makefile  Makefile.in
ALIZE_3.0/wincfg/: ALIZE_2010.vcxproj  ALIZE_2010.vcxproj.filters
Demo/: README  UBMGMM.pm  test.pl
Demo/calEER/: Compute_EER.m  DET_usage.m  Eval_Spkr_Det.m  GET_EER_DET_script.m  Min_DCF.m
Demo/conf/: ComputeTest.cfg  EnergyDetector.cfg  NormFeat.cfg  NormFeatEnergy.cfg  TrainTarget.cfg
Demo/ndx/: sre04_1side_male_train.lst  sre05_male_test_result.txt
Demos/: README.md
Demos/01_GMM-UBM_system_with_ALIZE3.0/: 02b_RUN_htk_front-end.sh  03_RUN_gmm-ubm.sh  CreateNormLists.pl  README
Demos/02_i-vector_system_with_ALIZE3.0/: 01_RUN_feature_extraction.sh  02a_RUN_spro_front-end.sh  03_RUN_i-vector_background.sh  04_RUN_i-vector_processing.sh  05_RUN_i-vector_step-by-step.sh  README
Demos/03_JFA_system_with_ALIZE3.0/: .directory  03_RUN_JFA.sh  README
Demos/04_demo_LIA_SpkSeg/: .tmpSpkMoulinette.lst  README
Demos/04_demo_LIA_SpkSeg/src/SpkMoulinette/: CMakeCache.txt  CMakeLists.txt  FindAlize.cmake  FindLIATools.cmake  HISTORY.md  Makefile  README.md  SpkMoulinette  cmake_install.cmake  install_manifest.txt
Demos/04_demo_LIA_SpkSeg/src/SpkMoulinette/include/: Moulinette.h  SegServerIO.h  SegServerIOEaf.h  SegServerIOHyp.h  SegServerIOLbl.h  SegServerIOMdtm.h  SegServerIORttm.h  SegServerIOTrs.h  SpkMoulinetteMain.h  SpkMoulinetteMain.h.in  tinyxml.h
Demos/04_demo_LIA_SpkSeg/src/SpkMoulinette/src/: Moulinette.cpp  SegServerIO.cpp  SegServerIOEaf.cpp  SegServerIOHyp.cpp  SegServerIOLbl.cpp  SegServerIOMdtm.cpp  SegServerIORttm.cpp  SegServerIOTrs.cpp  SpkMoulinetteMain.cpp
Demos/MyDemo/: FeatureExtraction.pm  spilt_true_imposter.pl
LIA_RAL_2.0/: LIA_RAL_2005.sln
LIA_RAL_2.0/lib/: liatools_Win32_Debug.exp  liatools_Win32_Debug.lib
LIA_RAL_2.0/wincfg/: BNGram_2005.vcproj  ComputeJFAStats_2005.vcproj  ComputeNorm_2005.vcproj  ComputeTest_2005.vcproj  CovIntra_2005.vcproj  EigenChannel_2005.vcproj  EigenVoice_2005.vcproj  EnergyDetector_2005.vcproj  EstimateDMatrix_2005.vcproj  ExtractParams_2005.vcproj  FusionScore_2005.vcproj  GmmTokenizer_2005.vcproj  Hist_2005.vcproj  LabelFusion_2005.vcproj  LabelNGram_2005.vcproj  NAPSV_2005.vcproj  NormFeatWindowMode_2005.vcproj  NormFeat_2005.vcproj  PolyExp_2005.vcproj  ReadFeatFile_2005.vcproj  ReadModel_2005.vcproj  ScoreWarp_2005.vcproj  Scoring_2005.vcproj  SequenceDecoder_2005.vcproj  SequenceExtractor_2005.vcproj  SpkAdapt_2005.vcproj  Svm_2005.vcproj  TimeCluster_2005.vcproj  TrainTarget_2005.vcproj  TrainWorld_2005.vcproj  liatools_2005.vcproj  modelToSv_2005.vcproj
LIA_RAL_3.0/: LIA_RAL.sln  Makefile  Makefile.in  config.status  configure
LIA_RAL_3.0/LIA_SpkDet/: Makefile  Makefile.in
LIA_RAL_3.0/LIA_SpkSeg/: Makefile  Makefile.in
LIA_RAL_3.0/LIA_SpkTools/: Makefile  Makefile.in
LIA_RAL_3.0/LIA_Utils/: Makefile  Makefile.in
LIA_RAL_3.0/lib/: ALIZE_Win32_Debug.exp  ALIZE_Win32_Debug.lib  ALIZE_Win32_Release.exp  ALIZE_Win32_Release.lib
LIA_RAL_3.0/wincfg/: BNGram_2010.vcxproj  BNGram_2010.vcxproj.filters  ComputeJFAStats_2010.vcxproj  ComputeJFAStats_2010.vcxproj.filters  ComputeNorm_2010.vcxproj  ComputeNorm_2010.vcxproj.filters  ComputeTest_2010.vcxproj  ComputeTest_2010.vcxproj.filters  EigenChannel_2010.vcxproj  EigenChannel_2010.vcxproj.filters  EigenVoice_2010.vcxproj  EigenVoice_2010.vcxproj.filters  EnergyDetector_2010.vcxproj  EnergyDetector_2010.vcxproj.filters  EstimateDMatrix_2010.vcxproj  EstimateDMatrix_2010.vcxproj.filters  ExtractParams_2010.vcxproj  ExtractParams_2010.vcxproj.filters  FusionScore_2010.vcxproj  FusionScore_2010.vcxproj.filters  GmmTokenizer_2010.vcxproj  GmmTokenizer_2010.vcxproj.filters  Hist_2010.vcxproj  Hist_2010.vcxproj.filters  IvExtractor_2010.vcxproj  IvExtractor_2010.vcxproj.filters  (+52 more)
SPro_4.0/: CHANGES  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.in  convert.c  fft.c  getopt.c  header.c  lpc.c  misc.c  scompare.c  scopy.c  sfbank.c  sfbcep.c  sig.c  slpc.c  slpcep.c  spf.c  spro.h  system.h
SPro_4.0/auxdir/: Makefile.am  Makefile.in  gccwarn.m4  mkinstalldirs
SPro_4.0/doc/: Makefile.am  Makefile.in  asvar-fig1.eps  changes.texi  fbank.eps  framing.eps  index.texi  intro.texi  library.texi  license.texi  reference.texi  speech.texi  spro.info  spro.texi  stamp-vti  user.texi
SPro_4.0/test/: Makefile.am  Makefile.in
SPro_4.0/test/dat/: Makefile.am  Makefile.in  know1.lfcc  know1.lin
SPro_4.0/test/ref/: Makefile.am  Makefile.in  scopy.usage  sfbank.usage  sfbcep.usage  slpc.usage  slpcep.usage
SPro_5.0/: CHANGES  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.in  fft.c  header.c  scopy.c  sfbank.c  slpcep.c  spro.h  sptables.h  system.h
SPro_5.0/auxdir/: Makefile.am  Makefile.in  gccwarn.m4  mkinstalldirs
SPro_5.0/doc/: Makefile.am  Makefile.in  changes.texi  index.texi  intro.texi  library.texi  reference.texi  speech.texi  spro.info  spro.texi  stamp-vti  user.texi
SPro_5.0/src/: convert.c  gggetopt.c  gggetopt.h  lpc.c  misc.c  result.mfcc  scompare.c  scompare.vcxproj  scompare.vcxproj.filters  scopy.vcxproj  scopy.vcxproj.filters  sfbank.vcxproj  sfbank.vcxproj.filters  sfbcep.c  sfbcep.vcxproj  sfbcep.vcxproj.filters  sig.c  slpc.c  slpc.vcxproj  slpc.vcxproj.filters  slpcep.vcxproj  slpcep.vcxproj.filters  spf.c  splp.c  splp.vcxproj  splp.vcxproj.filters  spro5.sln  train_left_001.mfcc.spro5  train_left_001.pcm
SPro_5.0/test/: Makefile.am  Makefile.in  bank.sh  copy.sh  fbcep.sh  lpc.sh  lpcep.sh  plp.sh
SPro_5.0/test/dat/: Makefile.am  Makefile.in
SPro_5.0/test/ref/: Makefile.am  Makefile.in  bank.1  copy.1  lpc.1  lpcep.1  plp.1
SVDLIBC_1.34/: Makefile  README  main.c  svdlib.c  svdutil.c
sphere_2.7/: readme.doc
(+1063 files in other folders)
