## -*- Makefile -*-
## Makefile for the auxdir directory
## Copyright (c) 98 Francois Yvon
## Process this file with automake to produce Makefile.in
##
## $Rcsfile$
## $Author: ggravier $
##
## $Date: 2002/07/25 14:14:31 $
## $Revision: 1.1 $
## $Log: Makefile.am,v $
## Revision 1.1  2002/07/25 14:14:31  ggravier
## added files for smooth checkout
##
## Revision 1.1.1.1  1999/04/06 15:44:02  yvon
## First release
##

aclocal_macros = gccwarn.m4

EXTRA_DIST = $(aclocal_macros)
