#############################################################################
##                                                                         ##
##                               Makefile.am                               ##
##                                                                         ##
##                     Audio Segmentation Toolkit                          ##
##                                                                         ##
## Guig                                                    Mon Aug  5 2002 ##
## ----------------------------------------------------------------------- ##
##                                                                         ##
##  Copyright (C) 2002-2010 Guillaume Gravier (ggravier@irisa.fr)          ##
##                                                                         ##
##  This program is free software; you can redistribute it and/or modify   ##
##  it under the terms of the GNU General Public License as published by   ##
##  the Free Software Foundation; either version 2, or (at your option)    ##
##  any later version.                                                     ##
##                                                                         ##
##  This program is distributed in the hope that it will be useful,        ##
##  but WITHOUT ANY WARRANTY; without even the implied warranty of         ##
##  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the          ##
##  GNU General Public License for more details.                           ##
##                                                                         ##
##  You should have received a copy of the GNU General Public License      ##
##  along with this program; if not, write to the Free Software            ##
##  Foundation, Inc., 59 Temple Place - Suite 330,                         ##
##  Boston, MA 02111-1307, USA.                                            ##
##                                                                         ##
#############################################################################
##
## CVS log:
##
##   $Author: guig $
##   $Date: 2010-01-04 16:38:08 +0100 (Mon, 04 Jan 2010) $
##   $Revision: 147 $
##

TESTS = copy.sh bank.sh fbcep.sh lpc.sh lpcep.sh plp.sh

TESTS_ENVIRONMENT = $(SHELL)

SUBDIRS = ref dat

EXTRA_DIST = copy.sh bank.sh fbcep.sh lpc.sh lpcep.sh plp.sh
