#############################################################################
##                                                                         ##
##                               Makefile.am                               ##
##                                                                         ##
##                     Audio Segmentation Toolkit                          ##
##                                                                         ##
## Guig                                                    Mon Aug  5 2002 ##
## ----------------------------------------------------------------------- ##
##                                                                         ##
##  Copyright (C) 2002 Guillaume Gravier (ggravier@irisa.fr)               ##
##                                                                         ##
##  This program is free software; you can redistribute it and/or modify   ##
##  it under the terms of the GNU General Public License as published by   ##
##  the Free Software Foundation; either version 2, or (at your option)    ##
##  any later version.                                                     ##
##                                                                         ##
##  This program is distributed in the hope that it will be useful,        ##
##  but WITHOUT ANY WARRANTY; without even the implied warranty of         ##
##  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the          ##
##  GNU General Public License for more details.                           ##
##                                                                         ##
##  You should have received a copy of the GNU General Public License      ##
##  along with this program; if not, write to the Free Software            ##
##  Foundation, Inc., 59 Temple Place - Suite 330,                         ##
##  Boston, MA 02111-1307, USA.                                            ##
##                                                                         ##
#############################################################################
##
## CVS log:
##
##   $Author: ggravier $
##   $Date: 2007-02-01 16:33:49 +0100 (Thu, 01 Feb 2007) $
##   $Revision: 138 $
##

EXTRA_DIST = copy.1 bank.1 fbcep.1 lpc.1 lpcep.1 plp.1
